Modified themleaf and exception handling

--- a/SportsShoe/src/main/resources/templates/confirm.html
+++ b/SportsShoe/src/main/resources/templates/confirm.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
   <title>e-Sports Sports Shoes</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,9 +26,6 @@
     }
   </style>
 </head>
-
-<body>
-
 <body style="background-color: #d6eb34">
 <div class="w-50 p-3" style="background-color: #eb5c34">
   		<div class="container text-center">
@@ -40,14 +34,33 @@
       </div>
 </div>
 
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+    
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a th:href="@{/}">Home</a></li> 
+       </ul>
+    </div>
+  </div>
+</nav>
+
 	<div class="container" style="font-size:2vw">
 		<h1>Payment Received </h1>
-		<h2> Thank you !! we appreciate your business </h2>
-		
-		 <td th:text="${paymentdetails.firstName}"> </td>
-		 <td th:text="${paymentdetails.lastName}"> </td>
+		<br>
+		<h2> Thank you !!</h2>
+			<td th:text="${paymentdetails.firstName}"> </td>
+		 	<td th:text="${paymentdetails.lastName}"> </td>
+		<h2> we appreciate your business </h2>
 	</div>
 		
-
 </body>
 </html>
